Completed user about section

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,3 +2,5 @@ carlie:
   name: Carlie La Vallee
   email: carlie@lavallee.com
   password_digest: <%= User.digest('password') %>
+  title: 3D Lighting Artist
+  bio: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vel tincidunt lorem. Donec ac est lorem. Ut vitae magna facilisis, tincidunt quam ac, fringilla nunc. Morbi at facilisis augue. Sed vitae iaculis odio, non blandit justo. Vestibulum posuere vel enim eu viverra. Sed aliquam ornare arcu, sed suscipit risus. Nulla tristique ante quis euismod pharetra. Nunc bibendum, augue vel mollis consectetur, orci lectus condimentum metus, id viverra augue est eu ante. Donec sit amet sem erat. Aenean ut euismod arcu. Donec fermentum tincidunt quam ut facilisis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.
