--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,5 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-# Ignore sendgrid api key
-sendgrid.*
+# Ignore files related to API keys
+.env
